fix resourceSource & CivilisationCardPlace